--- a/gen-d-spoon-annotation-processor/src/main/resources/velocity_templates/class.vm
+++ b/gen-d-spoon-annotation-processor/src/main/resources/velocity_templates/class.vm
@@ -1,7 +1,7 @@
 package ${ctClass.package};
 
-#set($imports = ${ctClass.getReferencedTypes()})
 ### Imports
+#set($imports = $ctClass.referencedTypes)
 #foreach($import in $imports)
     #set($importQualName = $import.qualifiedName.toString())
     #if (${importQualName} != "long" && ${importQualName} != "int"
@@ -13,4 +13,8 @@ import ${importQualName};
     #end
 #end
 
-### Class
+### Class annotations
+#set($annotations = $ctClass.annotations)
+#foreach($annotation in $annotations)
+$annotation.toString()
+#end
