Make generated dtos implement the DtoInterface and add class the header to velocity template

--- a/gen-d-spoon-annotation-processor/src/main/resources/velocity_templates/class.vm
+++ b/gen-d-spoon-annotation-processor/src/main/resources/velocity_templates/class.vm
@@ -18,3 +18,6 @@ import ${importQualName};
 #foreach($annotation in $annotations)
 $annotation.toString()
 #end
+### Class
+class $ctClass.simpleName implements#foreach($interface in $ctClass.superInterfaces)#if(!$foreach.first),#end $interface#end{
+}
