--- a/gen-d-spoon-annotation-processor/src/main/resources/velocity_templates/class.vm
+++ b/gen-d-spoon-annotation-processor/src/main/resources/velocity_templates/class.vm
@@ -1,13 +1,21 @@
+#macro( indent $indentLevel $bodyContent)
+#foreach($bodyLine in $bodyContent.lines().toList())
+##Write indents
+#foreach($level in [1..$indentLevel])    #end
+##Write line
+$bodyLine
+#end
+#end
 package ${ctClass.package};
 
 ### Imports
-#set($imports = $ctClass.referencedTypes)
+#set($imports = ${ctClass.referencedTypes})
 #foreach($import in $imports)
-    #set($importQualName = $import.qualifiedName.toString())
-    #if (${importQualName} != "long" && ${importQualName} != "int"
-        && ${importQualName} != "boolean" && ${importQualName} != "short"
-        && ${importQualName} != "float" && ${importQualName} != "double"
-        && ${importQualName} != "byte" && ${importQualName} != "char"
+    #set($importQualName = ${import.qualifiedName.toString()})
+    #if ($importQualName != "long" && $importQualName != "int"
+        && $importQualName != "boolean" && $importQualName != "short"
+        && $importQualName != "float" && $importQualName != "double"
+        && $importQualName != "byte" && $importQualName != "char"
         && !${importQualName.startsWith("java.lang")} )
 import ${importQualName};
     #end
@@ -16,8 +24,22 @@ import ${importQualName};
 ### Class annotations
 #set($annotations = $ctClass.annotations)
 #foreach($annotation in $annotations)
-$annotation.toString()
+${annotation}
 #end
 ### Class
-class $ctClass.simpleName implements#foreach($interface in $ctClass.superInterfaces)#if(!$foreach.first),#end $interface#end{
+class ${ctClass.simpleName} implements#foreach($interface in ${ctClass.superInterfaces})#if(!${foreach.first}),#end $interface#end{
+
+
+#foreach($field in ${ctClass.fields})
+    $field
+#end
+
+#foreach($constructor in ${ctClass.constructors})
+    #indent(1, ${constructor.toString()})
+#end
+
+#foreach($method in ${ctClass.methods})
+#indent(1, ${method.toString()})
+#end
+
 }
