Add field generation in Builder class template

--- a/gen-d-spoon-annotation-processor/src/main/resources/velocity_templates/class.vm
+++ b/gen-d-spoon-annotation-processor/src/main/resources/velocity_templates/class.vm
@@ -50,7 +50,13 @@ class ${ctClass.simpleName} implements #concatCollection($ctClass.superInterface
 #foreach($type in ${ctClass.nestedTypes})
     #if($type.simpleName=="Builder")
     ##
-        #concatCollection($type.modifiers, " ") class ${type.simpleName}{}
+        #concatCollection($type.modifiers, " ") class ${type.simpleName}{
+
+        #foreach($field in ${ctClass.fields})
+            #indent(2, $field.toString())$lb##
+        #end
+
+    }
     #end
 #end
 
