Add DtoModel class generation to annotation processor
Introduce logic in Velocity templates and Kotlin utility methods to generate a nested DtoModel class. The DtoModel contains static fields mapping to the dto class's field names

--- a/gen-d-spoon-annotation-processor/src/main/resources/velocity_templates/class.vm
+++ b/gen-d-spoon-annotation-processor/src/main/resources/velocity_templates/class.vm
@@ -93,8 +93,22 @@ class ${ctClass.simpleName} implements #concatCollection($ctClass.superInterface
         #foreach($annotation in $annotations)
             #indent(1, ${annotation.toString()})$lb##
         #end
-    ##
+        ##
         #concatCollection($type.modifiers, " ") class ${type.simpleName} extends ${type.superclass.simpleName}<${ctClass.simpleName}>{}
+    #end
+#end
+
+### DtoModel class
+#foreach($type in ${ctClass.nestedTypes})
+    #if($type.simpleName=="DtoModel")
+    ##
+    #concatCollection($type.modifiers, " ") class DtoModel{
+
+    #foreach($field in ${ctClass.fields})
+        public static final String _${field.simpleName} = "${field.simpleName}";
+    #end
+
+    }
     #end
 #end
 
