Add applyProjectionTo method in class.vm template

--- a/gen-d-spoon-annotation-processor/src/main/resources/velocity_templates/class.vm
+++ b/gen-d-spoon-annotation-processor/src/main/resources/velocity_templates/class.vm
@@ -105,7 +105,13 @@ class ${ctClass.simpleName} implements #concatCollection($ctClass.superInterface
             #end
         #end
 
+        public void applyProjectionTo(${ctClass.simpleName} dto) throws DtoProjectionException {
+        #foreach($field in ${ctClass.fields})
+            dto.${field.simpleName} = ProjectionUtils.getProjectedValue(dto.${field.simpleName}, this.${field.simpleName});
+        #end
         }
+
+    }
     #end
 #end
 
