Replaces `$` with `.` to ensure proper imports for nested classes

--- a/gen-d-spoon-annotation-processor/src/main/resources/velocity_templates/class.vm
+++ b/gen-d-spoon-annotation-processor/src/main/resources/velocity_templates/class.vm
@@ -21,7 +21,7 @@ package ${ctClass.package};
         && $importQualName != "float" && $importQualName != "double"
         && $importQualName != "byte" && $importQualName != "char"
         && !${importQualName.startsWith("java.lang")} )
-import ${importQualName};
+import ${importQualName.replace("$", ".")};
     #end
 #end
 
