Add support for customizable value wrapper types in DTOs
Introduced configuration options for specifying custom value wrapper types and default values in the annotation processor. Modified template rendering and class generation logic to support these configurations. Added tests to validate the functionality for different wrapper types.

--- a/gen-d-spoon-annotation-processor/src/main/resources/velocity_templates/class.vm
+++ b/gen-d-spoon-annotation-processor/src/main/resources/velocity_templates/class.vm
@@ -36,7 +36,7 @@ public class ${ctClass.simpleName} implements #concatCollection($ctClass.superIn
 
 #foreach($field in ${ctClass.fields})
     ##
-    #concatCollection($field.modifiers, " ") ${field.type} ${field.simpleName} = Option.none();$lb##
+    #concatCollection($field.modifiers, " ") ${field.type} ${field.simpleName} = $valueWrapperDefaultValue;$lb##
 #end
 
 #foreach($constructor in ${ctClass.constructors})
@@ -53,7 +53,7 @@ public class ${ctClass.simpleName} implements #concatCollection($ctClass.superIn
     public static class Builder{
 
         #foreach($field in ${ctClass.fields})
-            #indent(2, ${field.type.toString()}) ${field.simpleName} = Option.none();$lb##
+            #indent(2, ${field.type.toString()}) ${field.simpleName} = $valueWrapperDefaultValue;$lb##
         #end
 
         public static  Builder newInstance(){
@@ -63,7 +63,7 @@ public class ${ctClass.simpleName} implements #concatCollection($ctClass.superIn
 ##      Builder methods
         #foreach($field in ${ctClass.fields})
         public Builder ${field.simpleName}(final ${field.type} ${field.simpleName}){
-            this.${field.simpleName} = ${field.simpleName} == null ? Option.none() : ${field.simpleName};
+            this.${field.simpleName} = ${field.simpleName} == null ? $valueWrapperDefaultValue : ${field.simpleName};
             return this;
         }
 
