Add equals implementations for Projection classes in DTOs

--- a/hyperkit-dto-generator-plugin/src/main/resources/templates/dto.vm
+++ b/hyperkit-dto-generator-plugin/src/main/resources/templates/dto.vm
@@ -125,6 +125,20 @@ public class ${ctClass.simpleName} implements #concatCollection($ctClass.superIn
         #end
         }
 
+        @Override
+        public boolean equals(Object o) {
+
+            if (o == null || getClass() != o.getClass()) {
+                return false;
+            }
+
+            Projection that = (Projection) o;
+
+            return #foreach($field in ${projectionType.fields})#if($foreach.count!=1)$lb##
+                       && #end${field.simpleName}.equals(that.${field.simpleName})#end;
+
+        }
+
 ###     Projection Builder class
         public static class Builder {
 
