Fix equals in dto velocity template

--- a/hyperkit-dto-generator-plugin/src/main/resources/templates/dto.vm
+++ b/hyperkit-dto-generator-plugin/src/main/resources/templates/dto.vm
@@ -133,10 +133,14 @@ public class ${ctClass.simpleName} implements #concatCollection($ctClass.superIn
                 return false;
             }
 
+            #if($projectionType.fields.size==0)
+            return true;
+            #else
             Projection that = (Projection) o;
 
             return #foreach($field in ${projectionType.fields})#if($foreach.count!=1)$lb##
-                       && #end${field.simpleName}.equals(that.${field.simpleName})#end;
+                       &&#end Objects.equals(${field.simpleName}, that.${field.simpleName})#end;
+            #end
 
         }
 
