Fix incorrect field mapping in entity builders and templates

--- a/hyperkit-entity-generator/src/main/resources/templates/entity.vm
+++ b/hyperkit-entity-generator/src/main/resources/templates/entity.vm
@@ -92,7 +92,7 @@ public class ${className} {
         #end
         #foreach($fk in $foreignKeys)
         public Builder ${fk.fieldName.replaceAll("Id$", "")}(${fk.targetClassName} ${fk.fieldName.replaceAll("Id$", "")}) {
-            instance.userPreferences = ${fk.fieldName.replaceAll("Id$", "")};
+            instance.${fk.fieldName.replaceAll("Id$", "")} = ${fk.fieldName.replaceAll("Id$", "")};
             return this;
         }
 
