--- a/hyperkit-dto-generator-maven-plugin/pom.xml.templ
+++ b/hyperkit-dto-generator-maven-plugin/pom.xml.templ
@@ -115,12 +115,48 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>3.2.8</version>
+                    <configuration>
+                        <keyEnvName>MAVEN_SIGNING_SECRET_KEY_B64</keyEnvName>
+                        <keyFingerprintEnvName>MAVEN_SIGNING_KEY_FINGERPRINT</keyFingerprintEnvName>
+                        <passphraseEnvName>MAVEN_SIGNING_SECRET_KEY_PASSPHRASE</passphraseEnvName>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.5.4</version>
+                </plugin>
+                <plugin>
+                  <groupId>org.sonatype.central</groupId>
+                  <artifactId>central-publishing-maven-plugin</artifactId>
+                  <version>0.10.0</version>
+                  <extensions>true</extensions>
+                  <configuration>
+                    <publishingServerId>central</publishingServerId>
+                  </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
     </build>
+
+    <distributionManagement>
+        <repository>
+          <uniqueVersion>true</uniqueVersion>
+          <id>central</id>
+          <name>Maven Central</name>
+          <url>https://ossrh-staging-api.central.sonatype.com/service/local/</url>
+          <layout>default</layout>
+        </repository>
+        <snapshotRepository>
+          <uniqueVersion>true</uniqueVersion>
+          <id>central</id>
+          <name>Maven Snapshots</name>
+          <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+          <layout>default</layout>
+        </snapshotRepository>
+    </distributionManagement>
 
     <reporting>
         <plugins>
