--- a/hyperkit-dto-generator-maven-plugin/pom.xml.templ
+++ b/hyperkit-dto-generator-maven-plugin/pom.xml.templ
@@ -106,13 +106,16 @@
     </dependencies>
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-plugin-plugin</artifactId>
-                    <version>${maven-plugin-tools.version}</version>
-                </plugin>
+        <plugins>
+            <plugin>
+              <groupId>org.sonatype.central</groupId>
+              <artifactId>central-publishing-maven-plugin</artifactId>
+              <version>0.10.0</version>
+              <extensions>true</extensions>
+              <configuration>
+                <publishingServerId>central</publishingServerId>
+              </configuration>
+            </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-gpg-plugin</artifactId>
@@ -128,35 +131,17 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.5.4</version>
                 </plugin>
+        </plugins>
+        <pluginManagement>
+            <plugins>
                 <plugin>
-                  <groupId>org.sonatype.central</groupId>
-                  <artifactId>central-publishing-maven-plugin</artifactId>
-                  <version>0.10.0</version>
-                  <extensions>true</extensions>
-                  <configuration>
-                    <publishingServerId>central</publishingServerId>
-                  </configuration>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-plugin-plugin</artifactId>
+                    <version>${maven-plugin-tools.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
     </build>
-
-    <distributionManagement>
-        <repository>
-          <uniqueVersion>true</uniqueVersion>
-          <id>central</id>
-          <name>Maven Central</name>
-          <url>https://ossrh-staging-api.central.sonatype.com/service/local/</url>
-          <layout>default</layout>
-        </repository>
-        <snapshotRepository>
-          <uniqueVersion>true</uniqueVersion>
-          <id>central</id>
-          <name>Maven Snapshots</name>
-          <url>https://central.sonatype.com/repository/maven-snapshots/</url>
-          <layout>default</layout>
-        </snapshotRepository>
-    </distributionManagement>
 
     <reporting>
         <plugins>
