--- a/hyperkit-dto-generator-maven-plugin/pom.xml.templ
+++ b/hyperkit-dto-generator-maven-plugin/pom.xml.templ
@@ -115,21 +115,56 @@
                 <publishingServerId>central</publishingServerId>
               </configuration>
             </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-gpg-plugin</artifactId>
-                    <version>3.2.8</version>
-                    <configuration>
-                        <keyEnvName>MAVEN_SIGNING_SECRET_KEY_B64</keyEnvName>
-                        <keyFingerprintEnvName>MAVEN_SIGNING_KEY_FINGERPRINT</keyFingerprintEnvName>
-                        <passphraseEnvName>MAVEN_SIGNING_SECRET_KEY_PASSPHRASE</passphraseEnvName>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.5.4</version>
-                </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>3.2.8</version>
+                <configuration>
+                    <keyEnvName>MAVEN_SIGNING_SECRET_KEY_B64</keyEnvName>
+                    <keyFingerprintEnvName>MAVEN_SIGNING_KEY_FINGERPRINT</keyFingerprintEnvName>
+                    <passphraseEnvName>MAVEN_SIGNING_SECRET_KEY_PASSPHRASE</passphraseEnvName>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                        <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-source-plugin</artifactId>
+              <version>3.4.0</version>
+              <executions>
+                <execution>
+                  <id>attach-sources</id>
+                  <goals>
+                    <goal>jar-no-fork</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-javadoc-plugin</artifactId>
+              <version>3.12.0</version>
+              <executions>
+                <execution>
+                  <id>attach-javadocs</id>
+                  <goals>
+                    <goal>jar</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.4</version>
+            </plugin>
         </plugins>
         <pluginManagement>
             <plugins>
