Fix Maven plugin publishing

--- a/hyperkit-dto-generator-maven-plugin/pom.xml.templ
+++ b/hyperkit-dto-generator-maven-plugin/pom.xml.templ
@@ -105,10 +105,10 @@
     </dependencies>
     <profiles>
         <profile>
-            <id>publishArtifacts</id>
+            <id>artifact-publishing</id>
             <activation>
                 <property>
-                    <name>artifact-publishing</name>
+                    <name>publishArtifacts</name>
                     <value>true</value>
                 </property>
             </activation>
